# modihub

./: README.md  pyproject.toml
examples/: evaluation.py  hello-world.py  image-input.py  text-input.py
src/modi/: __init__.py
src/modi/eval/: evaluator.py
src/modi/llm/: anthropi_client.py  gemini_client.py  groq_client.py  ollama_client.py  openai_client.py
